# cns-abstract-explorer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: static.yml
docs/cns_2026_map/: README.md
scripts/: build_cns_2026_html.py  cns_2026_prototype_pipeline.py
